# nutrition-diary

./: .gitignore  README.md  pyproject.toml
src/nutrition_diary/: cli.py  config.py  db.py  util.py
src/nutrition_diary/export/: writer.py
src/nutrition_diary/grounding/: base.py  cache.py  synonyms.py  usda.py
src/nutrition_diary/pipeline/: clustering.py  metadata.py
src/nutrition_diary/recognition/: base.py  bedrock.py  mock.py  preprocess.py  prompts.py
src/nutrition_diary/schema/: entry.py
src/nutrition_diary/sources/: __init__.py  base.py  google_drive.py  local.py
src/nutrition_diary/stages/: __init__.py  assemble.py  base.py  cluster.py  export.py  ground.py  metadata.py  recognize.py  source.py  upload.py
src/nutrition_diary/uploaders/: base.py  csv_export.py  mfp_mapper.py  myfitnesspal.py
tests/: test_ground_stage_fake.py  test_pipeline_stages_mock.py  test_recognize_stage_tokens.py  test_upload_stage_mfp.py
tests/grounding/: test_cache.py  test_synonyms.py  test_usda_grounder.py
tests/recognition/: test_bedrock_helpers.py  test_preprocess.py
tests/sources/: test_google_drive_source.py
tests/uploaders/: test_mfp_mapper.py  test_myfitnesspal_uploader.py
