[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "nutrition-diary"
version = "0.1.0"
description = "Stage-by-stage photo-to-nutrition diary pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "jjmoey" }]
dependencies = [
  "typer>=0.12.3",
  "rich>=12.6,<13",
  "pydantic>=2.7.0,<2.12",
  "pydantic-settings>=2.2.1",
  "typing-extensions>=4.12.2,<4.13",
  "requests>=2.32.3",
  "tenacity>=8.3.0",
  "ratelimit>=2.2.1",
  "pillow>=10.4.0",
]

[project.optional-dependencies]
heic = ["pillow-heif>=0.16.0"]
aws = ["boto3>=1.34.0", "langchain-core>=0.2.0", "langchain-aws>=0.1.0"]
gdrive = ["google-api-python-client>=2.120.0", "google-auth-oauthlib>=1.2.0"]
mfp = ["myfitnesspal>=2.1,<3"]
dev = ["pytest>=8.2.0", "pytest-cov>=5.0.0", "ruff>=0.5.0", "mypy>=1.10.0"]

[project.scripts]
nd = "nutrition_diary.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/nutrition_diary"]

[tool.ruff]
line-length = 100
target-version = "py311"
